added index page and header element

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f51344" />
+    <meta name="theme-color" content="#ff0000" />
     <meta
       name="description"
       content="Webmotors é o maior e melhor site para comprar, vender, financiar, fazer seguro e saber tudo sobre veículos. Líder do segmento!"
